Adds notice to home page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,6 +5,12 @@
     {% include head.html %}
   </head>
 
+  <div class="notice">
+    <p>
+      This site is a work in progress. Therefore, expect significant changes.<br><b>Turing School</b> does not offer a <b>Data Analytics</b> program currently. For more information contact <a href="mailto:jorge@turing.edu"><b>jorge@turing.edu</b></a>.
+    </p>
+  </div>
+
   <body>
     {% include navigation.html %}
     <div class="container">
