--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -98,6 +98,16 @@ footer {
   }
 }
 
+.notice {
+  background-color: #12f1fc;
+  color :#036575!important;
+  font-family: helvetica neue;
+  font-weight: 400;
+  letter-spacing: .5px;
+  padding: 10px;
+  text-align: center;
+}
+
 summary {
   cursor: pointer;
 }
